deploy/jenkins/jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: prod
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 50000
      targetPort: 50000
      protocol: TCP
      name: agent
  type: ClusterIP
